# tg-media-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-arm  README.md  docker-compose-dev-arm.yml  docker-compose-dev-x86.yml  docker-compose.yml  rust.yml
.github/workflows/: cargo_check.yml  check.yml  clippy_check.yml  formatting.yml  release.yml  release_body_template.md  rust.yml  test.yml
src/: commands.rs  db.rs  db_old.rs  logs.rs  main.rs  utils.rs
src/db/: mod.rs  redis.rs
src/dialogue/: answer.rs  mod.rs
src/dialogue/states/: add_names.rs  add_sticker.rs  mod.rs  receive_names.rs  receive_sticker.rs  remove_names.rs  replacing.rs  start.rs
