[package]
name = "ttsticker_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["frunk", "macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

frunk = "0.4"
frunk_core = "0.4"

futures = "0.3.18"
derive_more = "0.99.9"

chrono = "0.4"

redis = { version = "0.21.4", features = ["tokio-comp"] }