[package]
name = "tg-media-bot"
description = "Telegram bot for aliasing media"
version = "0.1.0"
authors = ["Kirill Ivanov <bragov4ik@hotmail.com>"]
repository = "https://github.com/bragov4ik/tg-media-bot"
keywords = ["telegram", "bot", "media", "alias", "sticker"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derive_more = "0.99.9"
frunk = "0.4"
frunk_core = "0.4"
futures = "0.3.18"
log = "0.4"
pretty_env_logger = "0.4.0"
redis = { version = "0.21.4", features = ["tokio-comp"] }
regex = "1.5.4"
serde = "1.0"
serde_json = "1.0"
teloxide = { version = "0.5", features = ["frunk", "macros", "auto-send"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"